[fix] col padding broken [fix] survey.css set input to text align center

--- a/limesurvey/mixins.less
+++ b/limesurvey/mixins.less
@@ -36,5 +36,5 @@
 @import "@{bootstrap}/mixins/clearfix.less";
 @import "@{bootstrap}/mixins/center-block.less";
 @import "@{bootstrap}/mixins/nav-vertical-align.less";
-@import "@{bootstrap}/mixins/grid-framework.less";
+@import "@{limesurvey}/mixins/grid-framework.less";
 @import "@{limesurvey}/mixins/grid.less";
