--- a/limesurvey/template-core-base.less
+++ b/limesurvey/template-core-base.less
@@ -6,6 +6,13 @@
 .sr-only {
   white-space: nowrap;
 }
+/* fix survey.css */
+@media (max-width: 768px) {
+    .ls-answers .text-right{text-align:right;}
+    .ls-answers .text-left {text-align:left;}
+    .dir-rtl .ls-answers .text-right{text-align:left;}
+    .dir-rtl .ls-answers .text-left {text-align:right;}
+}
 /* The sub question part must not be more visible than question */
 .ls-answers label,.ls-answers th{font-weight:400}
 
@@ -16,8 +23,8 @@
 
 /* no form-group on radio-item and checkbox-item */
 li.radio-item,li.checkbox-item,li.radio-text-item,li.checkbox-text-item{margin-bottom:1em}
+li.text-item,li.checkbox-item,li.radio-text-item,li.checkbox-text-item{margin-bottom:1em}
 
-/* awesome-bootstrap-checkbox */
 li.radio-item,li.checkbox-item,li.radio-text-item,li.checkbox-text-item{display:block}
 /* map item : .input-group-addon.checkbox-item : put awesome padding */
 .dir-ltr .input-group-addon.radio-item,.dir-ltr .input-group-addon.checkbox-item {padding-left: (@grid-gutter-width / 2);}
@@ -33,8 +40,7 @@ li.radio-item,li.checkbox-item,li.radio-text-item,li.checkbox-text-item{display:
 .dir-ltr .radio-item input[type="radio"],.dir-ltr .checkbox-item input[type="checkbox"] {left: 0.1em;top:50%;margin-top:-0.5em;}
 .dir-rtl .radio-item input[type="radio"],.dir-rtl .checkbox-item input[type="checkbox"] {right: 0.1em;top:50%;margin-top:-0.5em;}
 td.answer-item{text-align:center}
-.dir-ltr td.radio-item input[type="radio"],.dir-ltr td.checkbox-item input[type="checkbox"] {position:relative;left:auto;top:auto;}
-.dir-rtl td.radio-item input[type="radio"],.dir-rtl td.checkbox-item input[type="checkbox"] {position:relative;left:auto;top:auto;}
+td.radio-item input[type="radio"],td.checkbox-item input[type="checkbox"] {position:relative;left:auto;right:auto;top:auto;}
 
 @media only screen and (max-width: @screen-xs) {
     .slider-list .slider-left{text-align:left}
@@ -74,25 +80,8 @@ table.ls-answers{width:100%}
 /* reset the margin and review the padding set by bootstrap */
 table.ls-answers input[type="checkbox"],table.ls-answers input[type="radio"]{margin: 0;}
 /* We need complete width in array , but don't touch to padding-(top|bottom) */
+.ls-label-xs-visibility{white-space: normal;}
 
-
-/* no margin on label : no margin after and before too */
-.dir-ltr .radio-item label.ls-label-xs-visibility::before,.dir-ltr .checkbox-item label.ls-label-xs-visibility::before{margin-left:0;}
-.dir-rtl .radio-item label.ls-label-xs-visibility::before,.dir-rtl .checkbox-item label.ls-label-xs-visibility::before{margin-right:0;}
-.dir-ltr .radio-item label.ls-label-xs-visibility::after,.dir-ltr .checkbox-item label.ls-label-xs-visibility::after {margin-left:0;padding-left:0;}
-.dir-rtl .radio-item label.ls-label-xs-visibility::after,.dir-rtl .checkbox-item label.ls-label-xs-visibility::after {margin-right:0;padding-right:0;}
-
-
-/* Hide the other content inside sr-only */
-.radio-item label.ls-label-xs-visibility > * ,.checkbox-item label.ls-label-xs-visibility > *{
-    position:absolute;
-    top:auto;
-    width:1px;
-    height:1px;
-    overflow:hidden;
-}
-.dir-ltr .radio-item label.ls-label-xs-visibility > * ,.dir-ltr .checkbox-item label.ls-label-xs-visibility > * {left:-10000px;}
-.dir-rtl .radio-item label.ls-label-xs-visibility > * ,.dir-rtl .checkbox-item label.ls-label-xs-visibility > * {right:-10000px;}
 /* hide answers for text-display question */
 .boilerplate .answer-container {display:none;}
 
