--- a/limesurvey/template-core-nomoretable.less
+++ b/limesurvey/template-core-nomoretable.less
@@ -8,30 +8,41 @@ only screen and (max-width: @screen-xs) {
     table.ls-answers,table.ls-answers thead,table.ls-answers tbody,table.ls-answers th,table.ls-answers td,table.ls-answers tr {display: block;}
     .dir-ltr table.ls-answers,.dir-ltr table.ls-answers thead,.dir-ltr table.ls-answers tbody,.dir-ltr table.ls-answers th,.dir-ltr table.ls-answers td,table.ls-answers tr {text-align:left;}
     .dir-rtl table.ls-answers,.dir-rtl table.ls-answers thead,.dir-rtl table.ls-answers tbody,.dir-rtl table.ls-answers th,.dir-rtl table.ls-answers td,table.ls-answers tr {text-align:right;}
-
+    .ls-answers > thead > tr > th, .ls-answers > tbody > tr > th, .ls-answers > tfoot > tr > th, .ls-answers > thead > tr > td, .ls-answers > tbody > tr > td, .ls-answers > tfoot > tr > td {
+        border: 0 none;
+    }
+    .ls-answers > thead > tr > th, .ls-answers > tbody > tr > th, .ls-answers > tfoot > tr > th, .ls-answers > thead > tr > td, .ls-answers > tbody > tr > td, .ls-answers > tfoot > tr > td {
+        border: 0 none;
+    }
+    .ls-answers > thead > tr,.ls-answers > tbody > tr {border: 1px solid @table-border-color;}
+    
     table.ls-answers thead{display:none} /* We don't need it for accessibility : we already have the label */
 
-    table.ls-answers tbody td{text-align:left;}
+    .dir-ltr table.ls-answers tbody td.answer-item{text-align:left;}
+    .dir-rtl table.ls-answers tbody td.answer-item{text-align:right;}
     table.ls-answers .information-item:empty{display:none}
-    .dir-rtl table.ls-answers tbody td{text-align:right;}
-    .ls-answers td.radio-item,.ls-answers td.checkbox-item{padding: 4px;}
-    .dir-ltr .ls-answers td.radio-item,.dir-ltr .ls-answers td.checkbox-item{padding-left: 24px;}
-    .dir-rtl .ls-answers td.radio-item,.dir-rtl .ls-answers td.checkbox-item{padding-right: 24px;}
+
+    /* Show the label and fix the input*/
+    table.ls-answers .ls-label-xs-visibility
+    {
+        display:block;
+        position:unset;
+        width: auto;
+        height: auto;
+        overflow:initial;
+    }
+    td.radio-item,td.checkbox-item,td.radio-text-item,td.checkbox-text-item{margin-bottom:0;position:relative;}
+    
+    td.radio-item input[type="radio"],td.checkbox-item input[type="checkbox"] {z-index:1;position:absolute;width:1em;height:1em;}
+    .dir-ltr td.radio-item input[type="radio"],.dir-ltr td.checkbox-item input[type="checkbox"] {left: 0.1em;top:50%;margin-top:-0.5em;}
+    .dir-rtl td.radio-item input[type="radio"],.dir-rtl td.checkbox-item input[type="checkbox"] {right: 0.1em;top:50%;margin-top:-0.5em;}
 
     table.ls-answers tbody .control-label{text-align:left}
     .dir-rtl table.ls-answers tbody .control-label{text-align:right}
     table.ls-answers .answertextright{text-align:right}
     .dir-rtl table.ls-answers .answertextright{text-align:left}
 
-    /* Show the label */
-    table.ls-answers .ls-label-xs-visibility
-    {
-        display:block;
-        position:relative;
-        width: auto;
-        height: auto;
-        overflow:initial;
-    }
+
     .dir-ltr table.ls-answers .ls-label-xs-visibility{left:auto;}
     .dir-rtl table.ls-answers .ls-label-xs-visibility{right:auto;}
 
@@ -42,25 +53,8 @@ only screen and (max-width: @screen-xs) {
     .dir-ltr table.ls-answers .radio-item .ls-label-xs-visibility,.dir-ltr table.ls-answers .checkbox-item .ls-label-xs-visibility{margin-left:0;}
     .dir-rtl table.ls-answers .radio-item .ls-label-xs-visibility,.dir-rtl table.ls-answers .checkbox-item .ls-label-xs-visibility{margin-right:0;}
 
-    table.ls-answers .ls-label-xs-visibility > *
-    {
-        position:relative;
-        top:auto;
-        width:auto;
-        height:auto;
-        overflow:auto;
-    }
-    .dir-ltr table.ls-answers .ls-label-xs-visibility > * {left:auto;}
-    .dir-rtl table.ls-answers .ls-label-xs-visibility > * {right:auto;}
-
-    .dir-ltr table.ls-answers .radio-item label.ls-label-xs-visibility::before,.dir-ltr table.ls-answers .checkbox-item label.ls-label-xs-visibility::before {margin-left:-20px;}
-    .dir-rtl table.ls-answers .radio-item label.ls-label-xs-visibility::before,.dir-rtl table.ls-answers .checkbox-item label.ls-label-xs-visibility::before {margin-right:-20px;}
-    .dir-ltr table.ls-answers .radio-item label.ls-label-xs-visibility::after,.dir-ltr table.ls-answers .checkbox-item label.ls-label-xs-visibility::after {margin-left:-20px;}
-    .dir-rtl table.ls-answers .radio-item label.ls-label-xs-visibility::after,.dir-rtl table.ls-answers .checkbox-item label.ls-label-xs-visibility::after {margin-right:-20px;}
 
     table.ls-answers > tbody > tr:hover {
         background-color: transparent;
     }
-    /* bs fix */
-    table.ls-answers td.visible-xs,table.ls-answers th.visible-xs{display:block !important}
 }
